<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/pic2" />

    <TextView
        android:id="@+id/tv1"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginBottom="-28dp"
        android:text="@string/ice_cream_sundae" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv2"
        android:layout_marginStart="10dp"
        android:text="@string/moi"
        android:textColor="#60000000"
        android:layout_marginBottom="-20dp"
        android:layout_alignBottom="@id/tv1"

        />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/tv2"
        android:layout_marginTop="29dp"
        android:numStars="5"
        android:rating="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2"
        android:layout_alignLeft="@id/ratingBar"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="28dp"
        android:text="@string/rev" />

</RelativeLayout>